Troubleshooting asset pipeline

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -30,5 +30,6 @@ jqueryui/images/ui-icons_548b48_256x240.png: jqueryui/images/ui-icons_548b48_256
 jqueryui/images/ui-icons_5c91aa_256x240.png: jqueryui/images/ui-icons_5c91aa_256x240-5a2ae992872b9de629b2f4202814e3d4.png
 jqueryui/images/ui-icons_8a1f11_256x240.png: jqueryui/images/ui-icons_8a1f11_256x240-1bd512b3413a9e8d35d11d5b0ffcf561.png
 jqueryui/images/ui-icons_ffffff_256x240.png: jqueryui/images/ui-icons_ffffff_256x240-e40cd19ddddacd590819d60fceb52268.png
+active_admin.css: active_admin-a862da0b2ed8685e45f9ca2958b09577.css
 application.css: application-e20feaecb13834ce3d92ecc55482c747.css
 active_admin/application.js: active_admin/application-fc2444d7cd62181e5f61f011397bf7ce.js
