Some spec file changes

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -14,7 +14,7 @@ minus.png: minus-ad323c10a1555374c262b801c3cb723f.png
 plus.png: plus-fad5e41fd450289754927ccba0ebfbee.png
 plusminus.bak.png: plusminus.bak-afe252fe5fb938ec6445d7fc42b70ad5.png
 plusminus.png: plusminus-deae7904e2dacae1f0c402f0172d681c.png
-active_admin.js: active_admin-fc2444d7cd62181e5f61f011397bf7ce.js
+active_admin_custom.js: active_admin-fc2444d7cd62181e5f61f011397bf7ce.js
 application.js: application-62969c2ea8ab6ddc1af5ef6755489c68.js
 jqueryui/images/ui-bg_diagonals-thick_20_666666_40x40.png: jqueryui/images/ui-bg_diagonals-thick_20_666666_40x40-6b887cceea8deabd921b391f8735a806.png
 jqueryui/images/ui-bg_diagonals-thick_35_fbe3e4_40x40.png: jqueryui/images/ui-bg_diagonals-thick_35_fbe3e4_40x40-aa05eef5b8d7e61d63ef3be0d0fc11d1.png
