--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,8 @@ development:
   database: myssp_development
   pool: 5
   timeout: 5000
-  username: rickeaton
+  username: postgres
+  password: password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -15,7 +16,9 @@ test: &test
   host: localhost
   adapter: postgresql
   encoding: unicode
-  database: mssp_test
+  database: myssp_test
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
 
@@ -24,6 +27,8 @@ production:
   adapter: postgresql
   encoding: unicode
   database: myssp_production
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
 
