Ability to edit registration request.

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,10 @@ test: &test
   host: localhost
   adapter: postgresql
   encoding: unicode
-  database: mssp_test
+  database: myssp_test
   pool: 5
   timeout: 5000
+  username: rickeaton
 
 production:
   host: localhost
