--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.idea/
+
 config/database.yml
 .bundle
 db/*.sqlite3
 log/*.log
 tmp/**/*
-.idea/workspace.xml
-.idea/tasks.xml
 .sass-cache/
 stripe.rb
+heroku.thor
