--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.idea/misc.xml
+.gitignore
 .idea/*
 .bundle
 db/*.sqlite3
 log/*.log
 tmp/**/*
-.idea/workspace.xml
-.idea/tasks.xml
 .sass-cache/
 config/initializers/stripe.rb
+config/database.yml
