--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,8 @@ development:
   database: myssp_development
   pool: 5
   timeout: 5000
-  username: rickeaton
+  username: postgres
+  password: password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,7 +17,8 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: myssp_test
-  username: rickeaton
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
 
@@ -25,7 +27,8 @@ production:
   adapter: postgresql
   encoding: unicode
   database: myssp_production
-  username: rickeaton
+  username: postgres
+  password: password
   pool: 5
   timeout: 5000
 
