--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.gitignore
+.idea/misc.xml
 .idea/*
 .bundle
 db/*.sqlite3
 log/*.log
 tmp/**/*
+.idea/workspace.xml
+.idea/tasks.xml
 .sass-cache/
 config/initializers/stripe.rb
-config/database.yml
