--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,7 @@ development:
   database: myssp_development
   pool: 5
   timeout: 5000
-  username: postgres
-  password: password
+  username: rickeaton
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,12 +15,7 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: myssp_test
-<<<<<<< HEAD
-  username: postgres
-  password: password
-=======
   username: rickeaton
->>>>>>> remotes/upstream/master
   pool: 5
   timeout: 5000
 
@@ -30,12 +24,7 @@ production:
   adapter: postgresql
   encoding: unicode
   database: myssp_production
-<<<<<<< HEAD
-  username: postgres
-  password: password
-=======
   username: rickeaton
->>>>>>> remotes/upstream/master
   pool: 5
   timeout: 5000
 
