--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@ development:
   database: myssp_development
   pool: 5
   timeout: 5000
-  username: postgres
-  password: password
+  username: rickeaton
+#  password: password
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -17,8 +17,8 @@ test: &test
   adapter: postgresql
   encoding: unicode
   database: myssp_test
-  username: postgres
-  password: password
+  username: rickeaton
+#  password: rickeaton
   pool: 5
   timeout: 5000
 
@@ -27,8 +27,8 @@ production:
   adapter: postgresql
   encoding: unicode
   database: myssp_production
-  username: postgres
-  password: password
+  username: rickeaton
+#  password: password
   pool: 5
   timeout: 5000
 
